Fixed alignment of Slideout navs on iOS.

--- a/src/themes/ios/slideout.less
+++ b/src/themes/ios/slideout.less
@@ -63,7 +63,7 @@ body.slide-out-app {
 
     &.show {
       display: block !important;
-      margin-top: 20px !important;
+      z-index: 10000;
     }
   }
 }
